set up form for size selection html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
   <link href="css/styles.css" rel="stylesheet" type="text/css">
   <script src="js/scripts.js"></script>
 <body>
-  
+  <h1>Golden Pizza</h1>
+  <form id="crust">
+    <input type="radio" id="small" name="pizza-size" value="small">
+    <label for="html">Small</label><br>
+    <input type="radio" id="medium" name="pizza-size" value="meidum">  
+    <label for="css">medium</label><br>
+    <input type="radio" id="large" name="pizza-size" value="large">
+    <label for="javascript">large</label>
 </body>
 </html>
