combine two forms into one form

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <script src="js/scripts.js"></script>
 <body>
     <h1>Golden Pizza</h1>
-    <form id="crust">
+    <form id="pizza">
         <h2>Choose your pizza size! $100 per inch</h2>
         <input type="radio" id="small" name="pizza-size" value="small">
         <label for="html">Small 10"</label>
@@ -18,8 +18,7 @@
         <br>
         <input type="radio" id="large" name="pizza-size" value="large">
         <label for="javascript">Large 14"</label>
-    </form>
-    <form id="toppings">
+    
         <h2> Choose your toppings! $50 each</h2>
         <h4> (if none are selected, pizza will be cheese only!) </h4>
         <input type="checkbox" id="topping1" name="topping1" value="pepperoni">
