add button to form

--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
         <label for="topping5"> Onion</label><br>
         <input type="checkbox" id="topping6" name="topping6" value="olives">
         <label for="topping6"> Olives</label><br>
+        <br>
+        <br>
+
+        <button type="submit" class="btn"> Order Now! </button>
     </form>    
     <div class="results">
         <h2> Total Price </h2>
