--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <label for="html">Small 10"</label>
             <br>
             <br>
-            <input type="radio" id="medium" name="pizza-size" value="meidum">  
+            <input type="radio" id="medium" name="pizza-size" value="medium">  
             <label for="css">Medium 12"</label>
             <br>
             <br>
@@ -37,7 +37,7 @@
             <br>
             <br>
 
-            <button type="submit" class="btn"> Calculate Price! </button>
+            <button type="submit" class="btn" id="price-btn"> Calculate Price! </button>
         </form>    
         <div class="results">
             <h2> Total Price: </h2>
