--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
         
             <h2> Choose your toppings! $50 each</h2>
             <h4> (if none are selected, pizza will be cheese only!) </h4>
-            <input type="checkbox" id="topping1" name="topping1" value="pepperoni">
+            <input type="checkbox" id="topping1" name="toppings" value="pepperoni">
             <label for="topping11"> Pepperoni</label><br>
-            <input type="checkbox" id="topping2" name="topping2" value="mushrooms">
+            <input type="checkbox" id="topping2" name="toppings" value="mushrooms">
             <label for="topping2"> Mushrooms</label><br>
-            <input type="checkbox" id="topping3" name="topping3" value="spinach">
+            <input type="checkbox" id="topping3" name="toppings" value="spinach">
             <label for="topping3"> Spinach</label><br>
-            <input type="checkbox" id="topping4" name="topping4" value="green-pepper">
+            <input type="checkbox" id="topping4" name="toppings" value="green-pepper">
             <label for="topping4"> Green Pepper</label><br>
-            <input type="checkbox" id="topping5" name="topping5" value="onion">
+            <input type="checkbox" id="topping5" name="toppings" value="onion">
             <label for="topping5"> Onion</label><br>
-            <input type="checkbox" id="topping6" name="topping6" value="jalapenos">
+            <input type="checkbox" id="topping6" name="toppings" value="jalapenos">
             <label for="topping6"> Jalapenos</label><br>
             <br>
             <br>
