add reset button

--- a/index.html
+++ b/index.html
@@ -9,30 +9,30 @@
         <h1>Golden Pizza</h1>
         <form id="pizza">
             <h2>Choose your pizza size! $100 per inch</h2>
-            <input type="radio" id="small" name="pizza-size" value="small">
+            <input type="radio" id="pizza-size" name="small" value="small">
             <label for="html">Small 10"</label>
             <br>
             <br>
-            <input type="radio" id="medium" name="pizza-size" value="medium">  
+            <input type="radio" id="pizza-size" name="medium" value="medium">  
             <label for="css">Medium 12"</label>
             <br>
             <br>
-            <input type="radio" id="large" name="pizza-size" value="large">
+            <input type="radio" id="pizza-size" name="large" value="large">
             <label for="javascript">Large 14"</label>
         
             <h2> Choose your toppings! $50 each</h2>
             <h4> (if none are selected, pizza will be cheese only!) </h4>
-            <input type="checkbox" id="topping1" name="toppings" value="pepperoni">
+            <input type="checkbox" id="topping" name="toppings" value="pepperoni">
             <label for="topping11"> Pepperoni</label><br>
-            <input type="checkbox" id="topping2" name="toppings" value="mushrooms">
+            <input type="checkbox" id="topping" name="toppings" value="mushrooms">
             <label for="topping2"> Mushrooms</label><br>
-            <input type="checkbox" id="topping3" name="toppings" value="spinach">
+            <input type="checkbox" id="topping" name="toppings" value="spinach">
             <label for="topping3"> Spinach</label><br>
-            <input type="checkbox" id="topping4" name="toppings" value="green-pepper">
+            <input type="checkbox" id="topping" name="toppings" value="green-pepper">
             <label for="topping4"> Green Pepper</label><br>
-            <input type="checkbox" id="topping5" name="toppings" value="onion">
+            <input type="checkbox" id="topping" name="toppings" value="onion">
             <label for="topping5"> Onion</label><br>
-            <input type="checkbox" id="topping6" name="toppings" value="jalapenos">
+            <input type="checkbox" id="topping" name="toppings" value="jalapenos">
             <label for="topping6"> Jalapenos</label><br>
             <br>
             <br>
@@ -42,6 +42,7 @@
         <div class="results">
             <h2> Total Price: </h2>
             <p id="price"> </p>
+            <button type="button" id="reset"> Try a new combination!</button> 
         </div> 
     </div>   
 </body>
