fix spelling issue on reset button

--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
         <div class="results">
             <h2> Total Price: </h2>
             <p id="price"> </p>
-            <button type="button" id="reset"> Try a new combination!</button> 
+            <br>
+            <br>
+            <button type="button" id="reset"> Price a new pizza!</button> 
         </div> 
     </div>   
 </body>
