fix spelling error

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
         <h1>Golden Pizza</h1>
         <form id="pizza">
             <h2>Choose your pizza size! $100 per inch</h2>
-            <input type="radio" id="pizza-size" name="small" value="small">
+            <input type="radio" id="pizza-size" name="pizza-size" value="small">
             <label for="html">Small 10"</label>
             <br>
             <br>
-            <input type="radio" id="pizza-size" name="medium" value="medium">  
+            <input type="radio" id="pizza-size" name="pizza-size" value="medium">  
             <label for="css">Medium 12"</label>
             <br>
             <br>
-            <input type="radio" id="pizza-size" name="large" value="large">
+            <input type="radio" id="pizza-size" name="pizza-size" value="large">
             <label for="javascript">Large 14"</label>
         
             <h2> Choose your toppings! $50 each</h2>
